--- a/Giddy Goat Coffee/Giddy Goat Coffee/NewStoryboard.storyboard
+++ b/Giddy Goat Coffee/Giddy Goat Coffee/NewStoryboard.storyboard
@@ -30,9 +30,12 @@
                             <constraint firstItem="HVY-UA-QKV" firstAttribute="bottom" secondItem="xBB-tC-vwS" secondAttribute="bottom" type="default" id="uoH-aB-NB6"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <segue destination="ohC-3f-rmB" kind="modal" identifier="segueToCredits" modalTransitionStyle="flipHorizontal" id="12L-0J-sDb"/>
+                    </connections>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="-244" y="-320"/>
+            <point key="canvasLocation" x="-241" y="-320"/>
         </scene>
         <!--Second View Controller - Second-->
         <scene sceneID="xlV-Yh-thQ">
@@ -240,17 +243,7 @@ Sunday
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView translatesAutoresizingMaskIntoConstraints="NO" userInteractionEnabled="NO" contentMode="center" image="bkgd-grayStripe.png" id="PZy-Xd-HAg"/>
-                            <button translatesAutoresizingMaskIntoConstraints="NO" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" hasAttributedTitle="NO" lineBreakMode="middleTruncation" id="Ogh-Qi-5gO">
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
+                            <imageView translatesAutoresizingMaskIntoConstraints="NO" userInteractionEnabled="NO" contentMode="scaleToFill" image="bkgd-grayStripe.png" id="Elc-zM-26K"/>
                             <label translatesAutoresizingMaskIntoConstraints="NO" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" lineBreakMode="wordWrap" numberOfLines="24" baselineAdjustment="alignBaselines" minimumFontSize="10" autoshrinkMode="minimumFontSize" preferredMaxLayoutWidth="225" id="d2f-v8-jAM">
                                 <constraints>
                                     <constraint firstAttribute="width" constant="225" id="x8z-Hb-Unf"/>
@@ -283,26 +276,41 @@ Thanks to Ben &amp; Jen Bell, Owners of The Giddy Goat Coffee House  Rolla, MO t
                                     <constraint firstAttribute="width" constant="167" id="wMo-ZY-blF"/>
                                 </constraints>
                             </imageView>
+                            <button translatesAutoresizingMaskIntoConstraints="NO" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" hasAttributedTitle="NO" lineBreakMode="middleTruncation" id="Ogh-Qi-5gO">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="320" id="WxX-5j-qzI"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="backgroundTapped:" destination="ohC-3f-rmB" eventType="touchUpInside" id="I6V-P5-5SJ"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="PZy-Xd-HAg" firstAttribute="bottom" secondItem="rzX-ff-oyK" secondAttribute="bottom" type="default" id="1jN-Qd-njJ"/>
+                            <constraint firstItem="Elc-zM-26K" firstAttribute="leading" secondItem="rzX-ff-oyK" secondAttribute="leading" type="default" id="2HP-UA-8xD"/>
+                            <constraint firstItem="Ogh-Qi-5gO" firstAttribute="leading" secondItem="rzX-ff-oyK" secondAttribute="leading" constant="-6" id="7yz-7a-982"/>
                             <constraint firstItem="Ogh-Qi-5gO" firstAttribute="bottom" secondItem="rzX-ff-oyK" secondAttribute="bottom" type="default" id="9Yg-KK-bk4"/>
                             <constraint firstItem="d2f-v8-jAM" firstAttribute="centerX" secondItem="YCt-Fi-k8J" secondAttribute="centerX" type="default" id="CBG-e3-AWY"/>
-                            <constraint firstItem="d2f-v8-jAM" firstAttribute="centerX" secondItem="rzX-ff-oyK" secondAttribute="centerX" type="default" id="Jm4-Ev-IMX"/>
-                            <constraint firstItem="PZy-Xd-HAg" firstAttribute="leading" secondItem="rzX-ff-oyK" secondAttribute="leading" constant="-1" id="Osi-H0-pM0"/>
                             <constraint firstItem="Ogh-Qi-5gO" firstAttribute="top" secondItem="rzX-ff-oyK" secondAttribute="top" type="default" id="Otr-Zx-1qS"/>
-                            <constraint firstItem="Ogh-Qi-5gO" firstAttribute="leading" secondItem="PZy-Xd-HAg" secondAttribute="leading" type="default" id="Qgl-4f-DHb"/>
-                            <constraint firstItem="PZy-Xd-HAg" firstAttribute="trailing" secondItem="Ogh-Qi-5gO" secondAttribute="trailing" type="default" id="cIa-gn-68O"/>
-                            <constraint firstItem="PZy-Xd-HAg" firstAttribute="top" secondItem="rzX-ff-oyK" secondAttribute="top" type="default" id="tTl-M0-wyi"/>
+                            <constraint firstItem="Elc-zM-26K" firstAttribute="top" secondItem="rzX-ff-oyK" secondAttribute="top" type="default" id="TT5-vN-13F"/>
+                            <constraint firstItem="Elc-zM-26K" firstAttribute="bottom" secondItem="rzX-ff-oyK" secondAttribute="bottom" type="default" id="iYy-JB-BG9"/>
                             <constraint firstAttribute="bottom" secondItem="d2f-v8-jAM" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="vAH-JJ-Zu8"/>
                             <constraint firstItem="YCt-Fi-k8J" firstAttribute="top" secondItem="rzX-ff-oyK" secondAttribute="top" constant="20" symbolic="YES" type="default" id="weF-rC-hYb"/>
+                            <constraint firstItem="d2f-v8-jAM" firstAttribute="leading" secondItem="rzX-ff-oyK" secondAttribute="leading" constant="47" id="wvf-yD-wu5"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tNx-eX-dXT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="647" y="305"/>
+            <point key="canvasLocation" x="199" y="-320"/>
         </scene>
         <!--First View Controller - First-->
         <scene sceneID="AH8-K2-HAQ">
@@ -380,7 +388,7 @@ Thanks to Ben &amp; Jen Bell, Owners of The Giddy Goat Coffee House  Rolla, MO t
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1L9-Bl-ckW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="231" y="-320"/>
+            <point key="canvasLocation" x="612" y="305"/>
         </scene>
     </scenes>
     <resources>
@@ -419,7 +427,10 @@ Thanks to Ben &amp; Jen Bell, Owners of The Giddy Goat Coffee House  Rolla, MO t
         <class className="GGCPunchViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/GGCPunchViewController.h"/>
             <relationships>
+                <relationship kind="action" name="callPopup:"/>
+                <relationship kind="action" name="getPhotoForSharing:"/>
                 <relationship kind="action" name="gotoMap:"/>
+                <relationship kind="action" name="shareMe:"/>
                 <relationship kind="outlet" name="menu" candidateClass="AwesomeMenu"/>
             </relationships>
         </class>
